--- a/frontend/nestin/src/app/components/PropertyDetails/favorite-button/favorite-button.component.html
+++ b/frontend/nestin/src/app/components/PropertyDetails/favorite-button/favorite-button.component.html
@@ -9,14 +9,14 @@
       [name]="icon.heart" 
       [size]="size" 
       [color]="filledColor"
-      class="filled"
+      class="filled my-icon"
     ></lucide-icon>
   } @else {
     <lucide-icon 
       [name]="icon.heart" 
       [size]="size" 
       [color]="color"
-      class="outline"
+      class="outline my-icon"
     ></lucide-icon>
   }
 </button>
