refactor(frontend): enhance favorite btn

--- a/frontend/nestin/src/app/pages/favorites-page/favorites-page.component.html
+++ b/frontend/nestin/src/app/pages/favorites-page/favorites-page.component.html
@@ -16,7 +16,7 @@
               <!-- Added flex column -->
               <button
                 (click)="toggleFavorite($event, property)"
-                class="btn p-0 position-absolute top-0 end-0 me-2 mt-2 my-icon bg-transparent border-0">
+                class="btn p-0 position-absolute top-0 end-0 me-2 mt-2 favorite-btn active bg-transparent border-0">
                 <lucide-icon [name]="icons.heart"></lucide-icon>
               </button>
               <div class="ratio ratio-16x9 flex-shrink-0">
