--- a/frontend/nestin/src/app/pages/favorites-page/favorites-page.component.html
+++ b/frontend/nestin/src/app/pages/favorites-page/favorites-page.component.html
@@ -6,11 +6,11 @@
       </div>
     </div>
   } @else {
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
+    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 gy-5">
       <!-- Removed flex-grow-1 -->
       @for (property of properties; track property.propertyId) {
         <div class="col">
-          <div class="card h-100 rounded-3" style="max-height: 400px">
+          <div class="card h-100 rounded-4" style="max-height: 400px">
             <!-- Added max-height -->
             <div class="position-relative h-100 d-flex flex-column">
               <!-- Added flex column -->
@@ -23,14 +23,14 @@
                 <!-- Added flex-shrink-0 -->
                 <img
                   [src]="property.mainPhoto.photoUrl"
-                  class="card-img-top object-fit-cover"
+                  class="card-img-top object-fit-cover rounded-4"
                   alt="property main photo"
                   onerror="this.src='https://fakeimg.pl/600x400/?text=No+Image'" />
               </div>
               <div class="card-body d-flex flex-column">
                 <a
-                  [routerLink]="['/property-details', property.propertyId]"
-                  class="stretched-link text-decoration-none text-reset card-title fw-semibold h5"
+                  [routerLink]="['/property', property.propertyId]"
+                  class="stretched-link text-decoration-none text-reset card-title fw-semibold h6"
                   style="z-index: 1">
                   {{ property.title }}
                 </a>
